--- a/source/style/media.css
+++ b/source/style/media.css
@@ -1,23 +1,49 @@
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 768px){
     .navigation {
         display: none;
     }
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 768px){
+    .wrap {
+        height: 100vh;
+    }
+    
+    
     .header {
         width: 100%;
-        float: left;
-        background-color: rgb(137, 74, 167);
+        background: linear-gradient(to bottom, #de6262,#dd5e89);
     }
-    .header__list, .header__kendall-title, .header__kendall-text, .header__first-button, .header__input, .header__kendall-button  {
-        display: none;
-    }
+
     .base__layout {
+        width: 100%;
         margin-left: 0px;
     }
-    .header__form {
-        width: 4%;
+
+    .body__layout {
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .main, .upper__container, .upper__container-left, .upper__container-right, .footer__lower-container, .lower__container-right, .lower__container-left, .lower__container-right, .lower__container {
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .sidebar, .sidebar__header, .sidebar__header-items, .sidebar__body, .sidebar__body-row {
+        width: 100%;
+    }
+
+    .sidebar__body-row {
+        padding: 0px 15px 0px 0px;
+    }
+
+    .sidebar {
+        height: 100%;
+    }
+
+    .header__list, .header__kendall-title, .header__kendall-text, .header__first-button, .header__input, .header__kendall-button  {
+        display: none;
     }
 
     .header__img-kendall { 
@@ -28,5 +54,14 @@
     .statistics, .statistics__list {
         width: 100%;
         flex-wrap: wrap;
+    }
+
+    .footer__social-icons {
+        width: 100%;
+        display: flex;
+    }
+
+    .sidebar__input-form {
+        width: 100%;
     }
 }
