--- a/source/style/media.css
+++ b/source/style/media.css
@@ -10,6 +10,10 @@
         background: linear-gradient(to bottom, #de6262,#dd5e89);
     }
 
+    .header__list, .header__kendall-title, .header__kendall-text, .header__first-button, .header__input, .header__kendall-button  {
+        display: none;
+    }
+
     .base__layout {
         width: 100%;
         margin-left: 0px;
@@ -31,6 +35,10 @@
         flex-wrap: wrap;
     }
 
+    .lower__container-left {
+        width: 100%;
+    }
+
     .upper__container-right {
         display: none;
     }
@@ -43,7 +51,7 @@
         margin: 0 auto;
         width: 100%;
     }
-    
+
     .upper__container-right, .lower__container-right, .horizontal__upper-container, .horizontal__upper-container__inner, .horizontal__upper-container__blocks  {
         display: none;
     }
@@ -113,6 +121,10 @@
 
     .lower__container-left__left-part {
         display: flex;
+    }
+
+    .lower__container-left {
+        width: 100%;
     }
 
     .upper__container-right, .lower__container-right, .horizontal__upper-container, .horizontal__upper-container__inner, .horizontal__upper-container__blocks  {
