--- a/source/scss/config/_media.scss
+++ b/source/scss/config/_media.scss
@@ -1,6 +1,15 @@
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+  
+}
 
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+  
+}
 
-@media screen and (max-width: 768px){
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
     .navigation {
         display: none;
     }
@@ -88,7 +97,8 @@
     }
 }
 
-@media screen and (max-width: 340px){
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 480px) {
     .navigation {
         display: none;
     }
@@ -170,4 +180,3 @@
         height: 100%;
     }
 }
-
